Fix container overflow bug

--- a/src/thea.scss
+++ b/src/thea.scss
@@ -180,15 +180,6 @@ a {
   padding-bottom: 1rem;
   padding-top: 1rem;
 
-  .columns {
-    margin-left: -.8rem;
-    margin-right: -.8rem;
-
-    .column {
-      padding: .8rem .8rem;
-    }
-  }
-
   .card {
     border: 0;
     border-radius: $border-radius;
